--- a/ProyectoProveedor-master/nbproject/private/private.properties
+++ b/ProyectoProveedor-master/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 
-user.properties.file=/home/krac/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\kracWin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
